
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int gen_rand (int,int) ;

long get_ret(long base_ret, int bytes) {
 if (!bytes)
  return 0xbffff4ec;
 if (bytes < 0)
  return get_ret(base_ret, gen_rand(5, 1500));

 return ((base_ret - bytes) - ((bytes >> 8) << 3));
}
