; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21936.c_get_ret.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21936.c_get_ret.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_ret(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  store i64 3221222636, i64* %3, align 8
  br label %26

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %9
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @gen_rand(i32 5, i32 1500)
  %15 = call i64 @get_ret(i64 %13, i32 %14)
  store i64 %15, i64* %3, align 8
  br label %26

16:                                               ; preds = %9
  %17 = load i64, i64* %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = sext i32 %18 to i64
  %20 = sub nsw i64 %17, %19
  %21 = load i32, i32* %5, align 4
  %22 = ashr i32 %21, 8
  %23 = shl i32 %22, 3
  %24 = sext i32 %23 to i64
  %25 = sub nsw i64 %20, %24
  store i64 %25, i64* %3, align 8
  br label %26

26:                                               ; preds = %16, %12, %8
  %27 = load i64, i64* %3, align 8
  ret i64 %27
}

declare dso_local i32 @gen_rand(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
